# unlostpaws-worker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements-torch.txt  requirements.txt
.github/: release.yml
.github/workflows/: ci.yml  export-models.yml
app/: __init__.py  healthcheck.py  main.py
app/callback/: client.py
app/config/: profiles.py  runtime_validation.py  settings.py
app/models/: artifacts.py  execution_providers.py  factory.py  manifest.json  nsfw.py  onnx_export.py  onnx_nsfw.py  onnx_session.py  onnx_siglip.py  protocols.py  registry.py  relevance.py  safety_scoring.py  siglip.py  torch_nsfw.py  torch_siglip.py  types.py
app/pipeline/: download.py  orchestrator.py  quality.py
app/queue/: consumer.py  stats.py
app/schemas/: job.py  result.py
app/utils/: __init__.py  telemetry.py  url.py
docs/: GUIDE.md  MODEL_EXPORT.md  PERFORMANCE.md  benchmarks-docker-m4.json  benchmarks-native-m4.json
tests/: conftest.py  test_extended.py
tests/integration/: test_eval_subset.py  test_smoke.py
tests/unit/: conftest.py  test_artifacts.py  test_callback.py  test_consumer.py  test_core.py  test_download.py  test_execution_providers.py  test_factory.py  test_healthcheck.py  test_job_schema.py  test_onnx_backends.py  test_orchestrator_pet_type.py  test_pipeline.py  (+4 more)
tools/: __init__.py  __main__.py  _console.py  _paths.py  benchmark.py  cli.py  doctor.py  eval.py  export.py  run  run.sh  smoke.py  validate.py
(+6 files in other folders)
